--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,3 +1,5 @@
+include ../text-button/text-button.pug
+
 //- Параметры:
   elements - массив элементов дропдауна [{name: "Спальни", nameForms: ["Спальня","Спальни","Спален"], value: "2", min: "0", max: "5"},
                                          {name: "Кровати", nameForms: ["Кровать","Кровати","Кроватей"], value: "2", min: "0", max: "5"}]
@@ -28,5 +30,7 @@ mixin dropdown({title, elements, buttons, resultDefault, keyWords= null, isExpan
           button.dropdown__plus.dropdown__button.js-dropdown__plus(type="button") +
       if(buttons)
         .dropdown__bottom-buttons.js-dropdown__bottom-buttons
-          button.dropdown__clear.dropdown__bottom-button.js-dropdown__clear(type="button") очистить
-          button.dropdown__apply.dropdown__bottom-button.js-dropdown__apply(type="button") применить
+          .dropdown__clear.js-dropdown__clear
+            +text-button({ text: "Очистить" })
+          .dropdown__apply.js-dropdown__apply
+            +text-button({ text: "Применить" })
