--- a/src/pages/ui-kit/headers-footers/headers-footers.pug
+++ b/src/pages/ui-kit/headers-footers/headers-footers.pug
@@ -44,7 +44,7 @@ block content
     .headers-footers__header.headers-footers__header_logged-in
       +header({navbar: navbarInHeaderEn, userName: "Cosmin Negoita"})
     .headers-footers__footer
-      +footer({footerText: "Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.", menu: footerMenuEn, subscribeTitle: "Subscribe to our newsletter", subscribeText: "Receive our latest news and promotions in your inbox!", copyright: "Copyright © 2018 Toxin UI Kit. All rights reserved."})
+      +footer({footerText: "Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.", menu: footerMenuEn, subscriptionTitle: "Subscribe to our newsletter", subscriptionText: "Receive our latest news and promotions in your inbox!", copyright: "Copyright © 2018 Toxin UI Kit. All rights reserved."})
     .headers-footers__footer-creative
       +footer-creative()
 
