--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -61,18 +61,18 @@
       margin-bottom: 0;
     }
   }
-  &__subscribe {
+  &__subscription {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     width: 260px;
   }
-  &__subscribe-text {
+  &__subscription-text {
     line-height: 1.5rem;
     color: $color-main-100;
     margin-bottom: 20px;
   }
-  &__subscribe-field {
+  &__subscription-field {
     width: 100%;
   }
   &__copyright{
