Little fix in subscription.scss

--- a/src/components/subscription/subscription.scss
+++ b/src/components/subscription/subscription.scss
@@ -16,6 +16,15 @@
     text-transform: uppercase;
     color: $color-main-50;
   }
+  &__button-background {
+    background-color: white;
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    width: 2.6875rem;
+    height: 2.5rem;
+    border-radius: 4px;
+  }
   &__button {
     position: absolute;
     top: 0;
@@ -31,15 +40,6 @@
     color: $color-secondary;
     border: none;
     cursor: pointer;
-    &-background {
-      background-color: white;
-      position: absolute;
-      top: 1px;
-      right: 1px;
-      width: 2.6875rem;
-      height: 2.5rem;
-      border-radius: 4px;
-    }
     &:hover ~ .subscription-text-field__input {
       border-color: $color-main-50;
     }
