--- a/src/components/masked/masked.scss
+++ b/src/components/masked/masked.scss
@@ -1,9 +1,10 @@
 @import '../../scss/variables.scss';
 
-.text-field {
+.masked {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  position: relative;
   font-size: 0.75rem;
   &__title {
     text-transform: uppercase;
@@ -14,6 +15,36 @@
   &__subtitle {
     text-transform: uppercase;
     color: $color-main-50;
+  }
+  &__tooltip {
+    transform: scaleY(0);
+    position: absolute;
+    bottom: -35px;
+    width: 100%;
+    border: 1px solid red;
+    background-color: white;
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding: 5px;
+    font-size: 12px;
+    transform-origin: 0 0;
+    transition: transform 0.2s;
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: 21px;
+      right: 10%;
+      box-sizing: border-box;
+      width: 10px;
+      height: 10px;
+      background-color: white;
+      border-top: 1px solid red;
+      border-left: 1px solid red;
+      transform: rotate(45deg);
+    }
+    &_shown {
+      transform: scaleY(1);
+    }
   }
   &__input {
     width: 100%;
