--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -10,17 +10,12 @@ include ../text-button/text-button.pug
     
 mixin dropdown({title, elements, buttons, resultDefault, keyWords= null, isExpanded})
 
-  -
-    let expandedMod = ""
-    if(isExpanded)
-      expandedMod = "_expanded"
-
   .dropdown.js-dropdown(data-default= resultDefault, data-key-words= keyWords)
     .dropdown__title= title
     .dropdown__wrapper.js-dropdown__wrapper
       .dropdown__arrow expand_more
-      input.dropdown__input.js-dropdown__input(class="dropdown__input" + expandedMod, readonly, type="text", value= resultDefault)
-    .dropdown__elements.js-dropdown__elements(class="dropdown__elements" + expandedMod)
+      input.dropdown__input.js-dropdown__input(class=isExpanded && "dropdown__input_expanded", readonly, type="text", value= resultDefault)
+    .dropdown__elements.js-dropdown__elements(class=isExpanded && "dropdown__elements_expanded")
       each item in elements
         - const {name, nameForms, value= 0, min= 0, max= 5} = item
         .dropdown__element.js-dropdown__element
